--- a/share/discord/kurou-phenix-bundle-base.css
+++ b/share/discord/kurou-phenix-bundle-base.css
@@ -10,9 +10,9 @@
   --theme-version: "1.4";
   --main-color: #16356d;
   --hover-color: #1c4faf;
-  --online: #ff0000;
+  --online: #43b581;
   --idle: #faa61a;
-  --dnd: #cc0099;
+  --dnd: #f04747;
   --offline: #636b75;
   --invisible: #747f8d;
   --streaming: #643da7;
