--- a/share/discord/kurou-main-reborn.css
+++ b/share/discord/kurou-main-reborn.css
@@ -1,5 +1,5 @@
 /* Imports */
-@import "https://kurou-kun.github.io/share/discord/kurou-phenix-bundle-base.css";
+@import "https://monstrousdev.github.io/themes/phoenix-bundle/base.css";
 
 
 /* Variables */
