--- a/share/discord/ashuramaru theme/ashuramaru-edit.css
+++ b/share/discord/ashuramaru theme/ashuramaru-edit.css
@@ -1,6 +1,6 @@
 /* IMPORTS */
 
-@import url(https://kurou-kun.github.io/share/discord/ashuramaru%20theme/ashuramaru-voice-edit.css);
+@import url(https://kurou-kun.github.io/share/discord/ashuramaru%20theme/ashuramaru-voice-edit.css);	/* VOICE EDIT */
 @import url(https://kurou-kun.github.io/share/discord/ashuramaru%20theme/ashuramaru-base.css);	/* BASE */
 @import url(https://kurou-kun.github.io/share/discord/ashuramaru%20theme/ashuramaru-modal-layout.css);	/* USER MODAL LAYOUT */
 @import url(https://kurou-kun.github.io/share/discord/ashuramaru%20theme/ashuramaru-bd.css);	/* BD ONLY FEATURES */
