--- a/share/discord/ashuramaru/ashuramaru-edit.css
+++ b/share/discord/ashuramaru/ashuramaru-edit.css
@@ -41,7 +41,7 @@
 		--background-blur: 2px;
 		--background-overlay: #00000099;
 	/* HOME ICON */
-		--home-icon: url('https://icon-library.com/images/discord-transparent-server-icon/discord-transparent-server-icon-10.jpg');
+		--home-icon: url('https://kurou-kun.github.io/share/discord/ashuramaru/Ashuramaru-Home-Icon.png');
 		--home-position: center;
 		--home-size: 50px;
 	/* BACKDROP */
