--- a/website/style.css
+++ b/website/style.css
@@ -14,7 +14,7 @@ body {
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-attachment: scroll;
-	background-position: fixed;
+	background-position: center;
 	widht: 110%;
 	height: 110%;
 	-webkit-filter: blur(5px);
@@ -33,11 +33,12 @@ body {
 	width: 1000px;
 	height: 800px;
 	margin: auto;
-	margin-top: 100px;
+	margin-top: 1000px;
 	left: 0;
 	right: 0;
 	z-index: 9999;
 	display: block;
+	position: fixed;
 }
 
 /* HEADER */
@@ -68,9 +69,9 @@ body {
 
 .background-body {
 	background-color: black;
-	opacity: 0.6;
 	width: 100%;
 	height: 80%;
+	background-color: rgb(0,0,0,0.6);
 }
 
 /* SIDEBAR */
@@ -90,6 +91,7 @@ body {
 	margin-left: 70px;
 	margin-top: 10px;
 	float: left;
+	background-color: rgb(5,5,5,0.1);
 }
 
 #sidebar-label-2 {
@@ -101,6 +103,7 @@ body {
 	margin-left: 85px;
 	margin-top: -20px;
 	float: left;
+	background-color: rgb(5,5,5,0.1);
 }
 
 .background-body-sidebar-empty {
@@ -123,6 +126,14 @@ body {
 	width: 74.5%;
 	float: right;
 	margin-top: -3%;
+	overflow-x: hidden;
+     overflow-y: auto;
+}
+
+#background-body-content-welcome {
+	width: 100%;
+	height: 90%;
+	border: none;
 }
 
 /* FOOTER */
