--- a/website/include/welcome.html
+++ b/website/include/welcome.html
@@ -2,14 +2,19 @@
 <html>
 	<head>
 		<style>
+			body {
+				overflow-y: scroll;
+				overflow-x: hidden;
+				overflow: hidden;
+			}
 			#title {
 				color: white;
-				font-family: Arial;
+				font-family: 'Fredoka', sans-serif;
 				text-align: center;
 			}
 			#description {
 				color: white;
-				font-family: Arial;
+				font-family: 'Nunito', sans-serif;
 				text-align: center;
 			}
 			.logo-div {
