--- a/website/style.css
+++ b/website/style.css
@@ -61,7 +61,7 @@ body {
 #background-header-title {
 	text-align: center;
 	color: red;
-	font-family: Arial;
+	font-family: 'Syne Mono', monospace;
 	margin-top: -35px;
 }
 
@@ -82,28 +82,25 @@ body {
 	float: left;
 }
 
-#sidebar-label-1 {
-	font-family: Arial;
+.background-body-sidebar-list {
+	list-style-type: none;
+	margin: 0;
+	padding: 0;
+	margin-right: 5%;
+}
+
+#sidebar-text {
+	font-family: 'Fredoka', sans-serif;
 	color: white;
 	text-align: right;
-	font-size: 40px;
-	opacity: 1;
-	margin-left: 70px;
-	margin-top: 10px;
-	float: left;
+	font-size: 45px;
+	text-decoration: none;
+	float: right;
 	background-color: rgb(5,5,5,0.1);
 }
 
-#sidebar-label-2 {
-	font-family: Arial;
-	color: white;
-	text-align: right;
-	font-size: 40px;
-	opacity: 1;
-	margin-left: 85px;
-	margin-top: -20px;
-	float: left;
-	background-color: rgb(5,5,5,0.1);
+#sidebar-text:hover {
+	color: red;
 }
 
 .background-body-sidebar-empty {
@@ -126,22 +123,30 @@ body {
 	width: 74.5%;
 	float: right;
 	margin-top: -3%;
-	overflow-x: hidden;
-     overflow-y: auto;
 }
 
 #background-body-content-iframe {
 	width: 100%;
-	height: 90%;
+	height: 95%;
 	border: none;
 }
 
 #background-body-content-error-404 {
 	color: white;
-	font-family: Arial;
+	font-family: 'Fredoka', sans-serif;
 	text-align: center;
 	font-size: 100px;
 	margin-top: 30%;
+	margin-left: -30%;
+}
+
+#background-body-content-error-404-description {
+	color: white;
+	font-family: 'Nunito', sans-serif;
+	text-align: center;
+	font-size: 30px;
+	margin-top: 10%;
+	margin-left: -30%;
 }
 
 /* FOOTER */
