--- a/website/include/welcome.html
+++ b/website/include/welcome.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<script>
+			document.addEventListener('contextmenu', event => event.preventDefault());
+		</script>
 		<style>
 			body {
 				overflow-y: scroll;
@@ -26,6 +29,7 @@
 				width: 50%;
 				margin-left: 25%;
 				margin-top: 5%;
+				filter: drop-shadow(0px 5px 5px black);
 			}
 		</style>
 	</head>
