--- a/website/include/welcome.html
+++ b/website/include/welcome.html
@@ -35,7 +35,7 @@
 	</head>
 	<body>
 		<h1 id="title">Welcome on my github</h1>
-		<h3 id="description">Here you can find every one of my projects and even more. <br><br>Enjoy!</h3>
+		<h3 id="description">Here you can find every projects i have made and even more. <br><br>Enjoy!</h3>
 		<div class="logo-div">
 			<img id="logo" src="..\images\white.png">
 		</div>
