--- a/website/include/ashuramaru-theme.html
+++ b/website/include/ashuramaru-theme.html
@@ -8,6 +8,12 @@
 			body {
 				overflow-y: scroll;
 				overflow-x: hidden;
+				-webkit-touch-callout: none;
+				-webkit-user-select: none;
+				-khtml-user-select: none;
+				-moz-user-select: none;
+				-ms-user-select: none;
+				user-select: none;
 			}
 			#title {
 				color: red;
@@ -18,6 +24,7 @@
 				width: 90%;
 				height: 40%;
 				margin-left: 4%;
+				pointer-events: none;
 			}
 			#content-description {
 				color: white;
