--- a/website/include/projects.html
+++ b/website/include/projects.html
@@ -8,11 +8,18 @@
 			body {
 				overflow-y: scroll;
 				overflow-x: hidden;
+				-webkit-touch-callout: none;
+				-webkit-user-select: none;
+				-khtml-user-select: none;
+				-moz-user-select: none;
+				-ms-user-select: none;
+				user-select: none;
 			}
 			h1 {
 				color: white;
 				font-family: 'Fredoka', sans-serif;
 				text-align: center;
+				cursor: default;
 			}
 			
 			/* Project 1 */
@@ -29,6 +36,7 @@
 				margin-left: 1%;
 				margin-top: 5%;
 				filter: drop-shadow(0px 5px 5px black);
+				pointer-events: none
 			}
 			#project-1-title {
 				color: red;
@@ -72,6 +80,7 @@
 				margin-left: 1%;
 				margin-top: 5%;
 				filter: drop-shadow(0px 5px 5px black);
+				pointer-events: none;
 			}
 			#project-2-title {
 				color: red;
@@ -111,6 +120,7 @@
 				margin-left: 1%;
 				margin-top: 5%;
 				filter: drop-shadow(0px 5px 5px black);
+				pointer-events: none;
 			}
 			#project-3-title {
 				color: red;
