--- a/website/include/repositories.html
+++ b/website/include/repositories.html
@@ -9,11 +9,18 @@
 				overflow-y: scroll;
 				overflow-x: hidden;
 				overflow: hidden;
+				-webkit-touch-callout: none;
+				-webkit-user-select: none;
+				-khtml-user-select: none;
+				-moz-user-select: none;
+				-ms-user-select: none;
+				user-select: none;
 			}
 			#title {
 				color: white;
 				font-family: 'Fredoka', sans-serif;
 				text-align: center;
+				cursor: default;
 			}
 			
 			/* Repository 1 */
