--- a/website/include/welcome.html
+++ b/website/include/welcome.html
@@ -9,16 +9,24 @@
 				overflow-y: scroll;
 				overflow-x: hidden;
 				overflow: hidden;
+				-webkit-touch-callout: none;
+				-webkit-user-select: none;
+				-khtml-user-select: none;
+				-moz-user-select: none;
+				-ms-user-select: none;
+				user-select: none;
 			}
 			#title {
 				color: white;
 				font-family: 'Fredoka', sans-serif;
 				text-align: center;
+				cursor: default;
 			}
 			#description {
 				color: white;
 				font-family: 'Nunito', sans-serif;
 				text-align: center;
+				cursor: default;
 			}
 			.logo-div {
 				height: 70%;
@@ -30,6 +38,7 @@
 				margin-left: 25%;
 				margin-top: 5%;
 				filter: drop-shadow(0px 5px 5px black);
+				pointer-events: none
 			}
 		</style>
 	</head>
