--- a/website/include/projects.html
+++ b/website/include/projects.html
@@ -111,7 +111,6 @@
 				width: 100%;
 				float: left;
 				margin-top: 2%;
-				display: none;
 			}
 			#project-3-preview {
 				height: 100%;
@@ -167,10 +166,10 @@
 		</div>
 		<!-- Project 3 -->
 		<div class="project-3">
-			<img id="project-3-preview" src="..\images\ashuramaru-bundle.png">
-			<h1 id="project-3-title">Ashuramaru-NULL</h1>
-			<p id="project-3-description">Theme created for BetterDiscord to change look of default appearance. It was made from combining CrystalVision into FrostedGlass kinda look but with a little bit of twist from my previous attempts in making this theme</p>
-			<a href="#">
+			<img id="project-3-preview" src="..\images\terminal.png">
+			<h1 id="project-3-title">Windows Activation Script</h1>
+			<p id="project-3-description">This script lets you activate your windows using kms system (forced activation via microsoft servers). All windows types supported.</p>
+			<a href="windows-activation.html">
 				<div class="project-3-area"></div>
 			</a>
 		</div>
