--- a/website/include/ashuramaru-theme.html
+++ b/website/include/ashuramaru-theme.html
@@ -96,7 +96,7 @@
 		<br>
 		<div class="content-buttons">
 			<a href="https://betterdiscord.app/" target="_blank"><button id="content-betterdiscord">BetterDiscord</button></a>
-			<a href="https://github.com/Kurou-kun/Ashuramaru-Bundle/releases/latest" target="_blank"><button id="content-download">Download</button></a>
+			<a href="https://github.com/Kurou-kun/kurou-kun.github.io/raw/main/download/discord/themes/Ashuramaru.theme.zip" target="_blank"><button id="content-download">Download</button></a>
 		</div>
 	</body>
 </html>
