--- a/website/include/projects.html
+++ b/website/include/projects.html
@@ -166,6 +166,45 @@
 				background-color: rgb(0,0,0,0);
 				position: absolute;
 			}
+			
+			/* Project 4 */
+			.project-4 {
+				background-color: rgb(0,0,0,0.2);
+				height: 30%;
+				width: 100%;
+				float: left;
+				margin-top: 2%;
+			}
+			#project-4-preview {
+				height: 100%;
+				width: 25%;
+				float: left;
+				margin-left: 1%;
+				margin-top: 5%;
+				filter: drop-shadow(0px 5px 5px black);
+				pointer-events: none;
+			}
+			#project-4-title {
+				color: red;
+				font-family: 'Fredoka', sans-serif;
+				font-size: 30px;
+				float: left;
+				margin-left: 10%;
+			}
+			#project-4-description {
+				color: white;
+				font-family: 'Nunito', sans-serif;
+				font-size: 20px;
+				float: left;
+				margin-left: 30%;
+				margin-top: -20%;
+			}
+			.project-4-area {
+				height: 44%;
+				width: 100%;
+				background-color: rgb(0,0,0,0);
+				position: absolute;
+			}
 		</style>
 	</head>
 	<body>
@@ -195,6 +234,15 @@
 			<p id="project-3-description">This script lets you activate your windows using kms system (forced activation via microsoft servers). All windows types supported.</p>
 			<a href="windows-activation.html">
 				<div class="project-3-area"></div>
+			</a>
+		</div>
+		<!-- Project 4 -->
+		<div class="project-4">
+			<img id="project-4-preview" src="..\images\terminal.png">
+			<h1 id="project-4-title">Automatic Shutdown Script</h1>
+			<p id="project-4-description">This script lets you turn off your pc at given time or cancel this operation. Its simple script for simple use.</p>
+			<a href="automatic-shutdown.html">
+				<div class="project-4-area"></div>
 			</a>
 		</div>
 	</body>
