--- a/website/style.css
+++ b/website/style.css
@@ -17,7 +17,7 @@ body {
 /* BACKGROUND */
 
 .background-image {
-	background-image: url("https://raw.githubusercontent.com/Kurou-kun/kurou-kun.github.io/main/website/images/background.jpg");
+	background-image: url("https://raw.githubusercontent.com/Kurou-kun/kurou-kun.github.io/main/website/images/background.jpg") !important;
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-attachment: scroll;
