--- a/website/include/welcome.html
+++ b/website/include/welcome.html
@@ -5,6 +5,9 @@
 			document.addEventListener('contextmenu', event => event.preventDefault());
 		</script>
 		<script>
+			window.history.replaceState('','','/');
+		</script>
+		<script>
 			document.onkeydown = function (e) {
  
         			// disable F12 key
