--- a/website/include/welcome.html
+++ b/website/include/welcome.html
@@ -70,7 +70,7 @@
 		<h1 id="title">Welcome on my github</h1>
 		<h3 id="description">This page is dedicated to my projects that I will do in my spare time.<br><br>Enjoy!</h3>
 		<div class="logo-div">
-			<img id="logo" src="..\images\white.png">
+			<img id="logo" loading="lazy" src="..\images\white.png">
 		</div>
 	</body>
 </html>
