--- a/website/include/projects.html
+++ b/website/include/projects.html
@@ -214,7 +214,7 @@
 			<img id="project-1-preview" src="..\images\ashuramaru-bundle.png">
 			<h1 id="project-1-title">Ashuramaru-Bundle</h1>
 			<p id="project-1-description">Ashuramaru Bundle is a skin suite designed to connect every supported skin with the custome panel made by Kurou to have as much customization possible withing this system...</p>
-			<a href="ashuramaru-bundle.html">
+			<a href="projects\ashuramaru-bundle.html">
 				<div class="project-1-area"></div>
 			</a>
 		</div>
@@ -223,7 +223,7 @@
 			<img id="project-2-preview" src="..\images\ashuramaru-bundle.png">
 			<h1 id="project-2-title">Ashuramaru Theme</h1>
 			<p id="project-2-description">Theme created for BetterDiscord to change look of default appearance. It was made from combining CrystalVision into FrostedGlass kinda look but with a little bit of twist from my previous attempts in making this theme.</p>
-			<a href="ashuramaru-theme.html">
+			<a href="projects\ashuramaru-theme.html">
 				<div class="project-2-area"></div>
 			</a>
 		</div>
@@ -232,7 +232,7 @@
 			<img id="project-3-preview" src="..\images\terminal.png">
 			<h1 id="project-3-title">Windows Activation Script</h1>
 			<p id="project-3-description">This script lets you activate your windows using kms system (forced activation via microsoft servers). All windows types supported.</p>
-			<a href="windows-activation.html">
+			<a href="projects\windows-activation.html">
 				<div class="project-3-area"></div>
 			</a>
 		</div>
@@ -241,7 +241,7 @@
 			<img id="project-4-preview" src="..\images\terminal.png">
 			<h1 id="project-4-title">Automatic Shutdown Script</h1>
 			<p id="project-4-description">This script lets you turn off your pc at given time or cancel this operation. Its simple script for simple use.</p>
-			<a href="automatic-shutdown.html">
+			<a href="projects\automatic-shutdown.html">
 				<div class="project-4-area"></div>
 			</a>
 		</div>
