--- a/website/include/projects/ashuramaru-theme.html
+++ b/website/include/projects/ashuramaru-theme.html
@@ -52,7 +52,7 @@
 			}
 			#content-description {
 				color: white;
-				font-family: 'Nunito', sans-serif;
+				font-family: 'Nunito', sans-serif; 
 				text-align: center;
 			}
 			.content-buttons {
@@ -64,7 +64,7 @@
 				width: 20%;
 				height: 5%;
 				font-size: 20px;
-				margin-left: 55%;
+				margin-left: 25%;
 				cursor: pointer;
 				color: white;
 				background-color: black;
@@ -73,21 +73,7 @@
 			#content-download:hover {
 				color: red;
 			}
-			#content-forum {
-				border: 1px black;
-				width: 25%;
-				height: 5%;
-				font-size: 20px;
-				margin-left: 25%;
-				cursor: pointer;
-				color: white;
-				background-color: black;
-				position: absolute;
-			}
-			#content-forum:hover {
-				color: red;
-			}
-			#content-rainmeter {
+			#content-betterdiscord {
 				border: 1px black;
 				width: 20%;
 				height: 5%;
@@ -97,20 +83,20 @@
 				background-color: black;
 				position: absolute;
 			}
-			#content-rainmeter:hover {
+			#content-betterdiscord:hover {
 				color: red;
-			}		
+			}
 		</style>
 	</head>
 	<body>
-		<h1 id="title">Ashuramaru-Bundle</h1>
-		<img id="cover" src="..\images\ashuramaru-bundle-cover.png">
-		<p id="content-description">Ashuramaru Bundle is a skin suite designed to connect every supported skin with the custome panel made by Kurou to have as much customization possible withing this system. Every skin was modified and connected with the panel to give a no expierienced users easy way to change default looking skin to their own imagination within limitations of the panel.</p>
+		<h1 id="title">Ashuramaru-Theme</h1>
+		<img id="cover" src="..\..\images\ashuramaru-theme-cover.png">
+		<p id="content-description">Theme created for BetterDiscord to change look of default appearance. It was made from combining CrystalVision into FrostedGlass kinda look but with a little bit of twist from my previous attempts in making this theme. Most of the credit goes to untuned for creating CrystalVision theme.</p>
+		<br>
 		<br>
 		<div class="content-buttons">
-			<a href="https://www.rainmeter.net/" target="_blank"><button id="content-rainmeter">Rainmeter</button></a>
-			<a href="https://github.com/Kurou-kun/Ashuramaru-Bundle/releases/latest" target="_blank"><button id="content-download">Download</button></a>
-			<a href="https://forum.rainmeter.net/viewtopic.php?t=39820" target="_blank"><button id="content-forum">Rainmeter Forum</button></a>
+			<a href="https://betterdiscord.app/" target="_blank"><button id="content-betterdiscord">BetterDiscord</button></a>
+			<a href="https://github.com/Kurou-kun/kurou-kun.github.io/raw/main/download/discord/themes/Ashuramaru.theme.zip" target="_blank"><button id="content-download">Download</button></a>
 		</div>
 	</body>
 </html>
