--- a/website/include/projects/automatic-shutdown.html
+++ b/website/include/projects/automatic-shutdown.html
@@ -75,13 +75,13 @@
 		</style>
 	</head>
 	<body>
-		<h1 id="title">Windows 10/11 Activation Script</h1>
-		<img id="cover" src="..\images\windows-activation-cover.png">
-		<p id="content-description">This script lets you activate your windows using kms system (forced activation via microsoft servers). All windows types supported.</p>
+		<h1 id="title">Windows Automatic Shutdown Script</h1>
+		<img id="cover" src="..\..\images\automatic-shutdown-cover.png">
+		<p id="content-description">This script lets you turn off your pc at given time or cancel this operation. Its simple script for simple use.</p>
 		<br>
 		<br>
 		<div class="content-buttons">
-			<a href="http://kurou-kun.github.io/download/windows/scripts/Windows-Activation.bat" target="_blank"><button id="content-download">Download</button></a>
+			<a href="http://kurou-kun.github.io/download/windows/scripts/Windows-Automatic-Shutdown.bat" target="_blank"><button id="content-download">Download</button></a>
 		</div>
 	</body>
 </html>
