--- a/website/include/projects/windows-activation.html
+++ b/website/include/projects/windows-activation.html
@@ -40,9 +40,9 @@
 				user-select: none;
 			}
 			#title {
-				color: red;
 				font-family: 'Fredoka', sans-serif;
 				text-align: center;
+				color: red;
 			}
 			#cover {
 				width: 90%;
@@ -64,7 +64,6 @@
 				width: 20%;
 				height: 5%;
 				font-size: 20px;
-				margin-left: 25%;
 				cursor: pointer;
 				color: white;
 				background-color: black;
@@ -73,30 +72,16 @@
 			#content-download:hover {
 				color: red;
 			}
-			#content-betterdiscord {
-				border: 1px black;
-				width: 20%;
-				height: 5%;
-				font-size: 20px;
-				cursor: pointer;
-				color: white;
-				background-color: black;
-				position: absolute;
-			}
-			#content-betterdiscord:hover {
-				color: red;
-			}
 		</style>
 	</head>
 	<body>
-		<h1 id="title">Ashuramaru-Theme</h1>
-		<img id="cover" src="..\images\ashuramaru-theme-cover.png">
-		<p id="content-description">Theme created for BetterDiscord to change look of default appearance. It was made from combining CrystalVision into FrostedGlass kinda look but with a little bit of twist from my previous attempts in making this theme. Most of the credit goes to untuned for creating CrystalVision theme.</p>
+		<h1 id="title">Windows 10/11 Activation Script</h1>
+		<img id="cover" src="..\..\images\windows-activation-cover.png">
+		<p id="content-description">This script lets you activate your windows using kms system (forced activation via microsoft servers). All windows types supported.</p>
 		<br>
 		<br>
 		<div class="content-buttons">
-			<a href="https://betterdiscord.app/" target="_blank"><button id="content-betterdiscord">BetterDiscord</button></a>
-			<a href="https://github.com/Kurou-kun/kurou-kun.github.io/raw/main/download/discord/themes/Ashuramaru.theme.zip" target="_blank"><button id="content-download">Download</button></a>
+			<a href="http://kurou-kun.github.io/download/windows/scripts/Windows-Activation.bat" target="_blank"><button id="content-download">Download</button></a>
 		</div>
 	</body>
 </html>
