--- a/website/include/projects/ashuramaru-bundle.html
+++ b/website/include/projects/ashuramaru-bundle.html
@@ -40,9 +40,9 @@
 				user-select: none;
 			}
 			#title {
+				color: red;
 				font-family: 'Fredoka', sans-serif;
 				text-align: center;
-				color: red;
 			}
 			#cover {
 				width: 90%;
@@ -52,7 +52,7 @@
 			}
 			#content-description {
 				color: white;
-				font-family: 'Nunito', sans-serif; 
+				font-family: 'Nunito', sans-serif;
 				text-align: center;
 			}
 			.content-buttons {
@@ -64,6 +64,7 @@
 				width: 20%;
 				height: 5%;
 				font-size: 20px;
+				margin-left: 55%;
 				cursor: pointer;
 				color: white;
 				background-color: black;
@@ -72,16 +73,44 @@
 			#content-download:hover {
 				color: red;
 			}
+			#content-forum {
+				border: 1px black;
+				width: 25%;
+				height: 5%;
+				font-size: 20px;
+				margin-left: 25%;
+				cursor: pointer;
+				color: white;
+				background-color: black;
+				position: absolute;
+			}
+			#content-forum:hover {
+				color: red;
+			}
+			#content-rainmeter {
+				border: 1px black;
+				width: 20%;
+				height: 5%;
+				font-size: 20px;
+				cursor: pointer;
+				color: white;
+				background-color: black;
+				position: absolute;
+			}
+			#content-rainmeter:hover {
+				color: red;
+			}		
 		</style>
 	</head>
 	<body>
-		<h1 id="title">Windows Automatic Shutdown Script</h1>
-		<img id="cover" src="..\images\automatic-shutdown-cover.png">
-		<p id="content-description">This script lets you turn off your pc at given time or cancel this operation. Its simple script for simple use.</p>
-		<br>
+		<h1 id="title">Ashuramaru-Bundle</h1>
+		<img id="cover" src="..\..\images\ashuramaru-bundle-cover.png">
+		<p id="content-description">Ashuramaru Bundle is a skin suite designed to connect every supported skin with the custome panel made by Kurou to have as much customization possible withing this system. Every skin was modified and connected with the panel to give a no expierienced users easy way to change default looking skin to their own imagination within limitations of the panel.</p>
 		<br>
 		<div class="content-buttons">
-			<a href="http://kurou-kun.github.io/download/windows/scripts/Windows-Automatic-Shutdown.bat" target="_blank"><button id="content-download">Download</button></a>
+			<a href="https://www.rainmeter.net/" target="_blank"><button id="content-rainmeter">Rainmeter</button></a>
+			<a href="https://github.com/Kurou-kun/Ashuramaru-Bundle/releases/latest" target="_blank"><button id="content-download">Download</button></a>
+			<a href="https://forum.rainmeter.net/viewtopic.php?t=39820" target="_blank"><button id="content-forum">Rainmeter Forum</button></a>
 		</div>
 	</body>
 </html>
