--- a/website/style.css
+++ b/website/style.css
@@ -138,18 +138,27 @@ body {
 	margin-right: 5%;
 }
 
-#sidebar-text {
-	font-family: 'Fredoka', sans-serif;
-	color: white;
+.nav {
+	text-decoration: none;
 	text-align: right;
 	font-size: 40px;
-	text-decoration: none;
+	font-family: 'Fredoka', sans-serif;
+	list-style-type: none;
+	margin: 0;
+	padding: 10px;
+	display: inline;
 	float: right;
+}
+
+.nav li a:hover{
+	color: red;
 	background-color: rgb(0,0,0,0.05);
 }
 
-#sidebar-text:hover {
-	color: red;
+.nav * {
+	color: white;
+	text-decoration: none;
+	display: block;
 }
 
 .background-body-sidebar-empty {
