--- a/website/include/projects/ashuramaru-osu-skin.html
+++ b/website/include/projects/ashuramaru-osu-skin.html
@@ -18,9 +18,9 @@
 				width: 96.8%;
 			}
 			#title {
-				color: red;
 				font-family: 'Fredoka', sans-serif;
 				text-align: center;
+				color: red;
 			}
 			#cover {
 				width: 90%;
@@ -42,7 +42,6 @@
 				width: 20%;
 				height: 5%;
 				font-size: 20px;
-				margin-left: 25%;
 				cursor: pointer;
 				color: white;
 				background-color: black;
@@ -51,30 +50,16 @@
 			#content-download:hover {
 				color: red;
 			}
-			#content-betterdiscord {
-				border: 1px black;
-				width: 20%;
-				height: 5%;
-				font-size: 20px;
-				cursor: pointer;
-				color: white;
-				background-color: black;
-				position: absolute;
-			}
-			#content-betterdiscord:hover {
-				color: red;
-			}
 		</style>
 	</head>
 	<body>
-		<h1 id="title">Ashuramaru-Theme</h1>
-		<img id="cover" src="..\..\images\ashuramaru-theme-cover.png">
-		<p id="content-description">Theme created for BetterDiscord to change look of default appearance. It was made from combining CrystalVision into FrostedGlass kinda look but with a little bit of twist from my previous attempts in making this theme. Most of the credit goes to untuned for creating CrystalVision theme.</p>
+		<h1 id="title">Ashuramaru Osu Skin</h1>
+		<img id="cover" src="..\..\images\osu-cover.jpg">
+		<p id="content-description">Skin for Osu created from 2 different skins which name i doesnt remember...</p>
 		<br>
 		<br>
 		<div class="content-buttons">
-			<a href="https://betterdiscord.app/" target="_blank"><button id="content-betterdiscord">BetterDiscord</button></a>
-			<a href="https://drive.google.com/file/d/1-BNdHaSRKf_Dis_1g45QVT9u6PVoW1Yi/view?usp=sharing" target="_blank"><button id="content-download">Download</button></a>
+			<a href="https://drive.google.com/file/d/1-U_jiZtd02pepsrmp_foX-abw5MOBOBR/view?usp=sharing" target="_blank"><button id="content-download">Download</button></a>
 		</div>
 	</body>
 </html>
