--- a/website/include/projects.html
+++ b/website/include/projects.html
@@ -1,33 +1,10 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+
 <html>
 	<head>
-		<script>
-			document.addEventListener('contextmenu', event => event.preventDefault());
-		</script>
-		<script>
-			document.onkeydown = function (e) {
- 
-        			// disable F12 key
-        			if(e.keyCode == 123) {
-            				return false;
-        			}
- 
-        			// disable I key
-        			if(e.ctrlKey && e.shiftKey && e.keyCode == 73){
-           				return false;
-        			}
- 
-        			// disable J key
-        			if(e.ctrlKey && e.shiftKey && e.keyCode == 74) {
-         		   		return false;
-        			}
- 
-        			// disable U key
-        			if(e.ctrlKey && e.keyCode == 85) {
-           				 return false;
-        			}
-    			}
-		</script>
+		<!-- JavaScript -->
+		<script type="text/javascript" src="..\javascript\context-menu.js"></script>
+		<script type="text/javascript" src="..\javascript\keyboard-keys.js"></script>
 		<style>
 			body {
 				overflow-y: scroll;
@@ -47,13 +24,13 @@
 			}
 			
 			/* Project 1 */
-			.project-1 {
+			.project {
 				background-color: rgb(0,0,0,0.2);
 				height: 30%;
 				width: 100%;
 				float: left;
 			}
-			#project-1-preview {
+			#project-preview {
 				height: 100%;
 				width: 25%;
 				float: left;
@@ -62,14 +39,14 @@
 				filter: drop-shadow(0px 5px 5px black);
 				pointer-events: none
 			}
-			#project-1-title {
+			#project-title {
 				color: red;
 				font-family: 'Fredoka', sans-serif;
 				font-size: 30px;
 				float: left;
 				margin-left: 10%;
 			}
-			#project-1-description {
+			#project-description {
 				color: white;
 				font-family: 'Nunito', sans-serif;
 				font-size: 20px;
@@ -77,7 +54,7 @@
 				margin-left: 30%;
 				margin-top: -20%;
 			}
-			.project-1-area {
+			.project-area {
 				height: 44%;
 				width: 100%;
 				background-color: rgb(0,0,0,0);
@@ -127,95 +104,17 @@
 				background-color: rgb(0,0,0,0);
 				position: absolute;
 			}
-			
-			/* Project 3 */
-			.project-3 {
-				background-color: rgb(0,0,0,0.2);
-				height: 30%;
-				width: 100%;
-				float: left;
-				margin-top: 2%;
-			}
-			#project-3-preview {
-				height: 100%;
-				width: 25%;
-				float: left;
-				margin-left: 1%;
-				margin-top: 5%;
-				filter: drop-shadow(0px 5px 5px black);
-				pointer-events: none;
-			}
-			#project-3-title {
-				color: red;
-				font-family: 'Fredoka', sans-serif;
-				font-size: 30px;
-				float: left;
-				margin-left: 10%;
-			}
-			#project-3-description {
-				color: white;
-				font-family: 'Nunito', sans-serif;
-				font-size: 20px;
-				float: left;
-				margin-left: 30%;
-				margin-top: -20%;
-			}
-			.project-3-area {
-				height: 44%;
-				width: 100%;
-				background-color: rgb(0,0,0,0);
-				position: absolute;
-			}
-			
-			/* Project 4 */
-			.project-4 {
-				background-color: rgb(0,0,0,0.2);
-				height: 30%;
-				width: 100%;
-				float: left;
-				margin-top: 2%;
-			}
-			#project-4-preview {
-				height: 100%;
-				width: 25%;
-				float: left;
-				margin-left: 1%;
-				margin-top: 5%;
-				filter: drop-shadow(0px 5px 5px black);
-				pointer-events: none;
-			}
-			#project-4-title {
-				color: red;
-				font-family: 'Fredoka', sans-serif;
-				font-size: 30px;
-				float: left;
-				margin-left: 10%;
-			}
-			#project-4-description {
-				color: white;
-				font-family: 'Nunito', sans-serif;
-				font-size: 20px;
-				float: left;
-				margin-left: 30%;
-				margin-top: -20%;
-			}
-			.project-4-area {
-				height: 44%;
-				width: 100%;
-				background-color: rgb(0,0,0,0);
-				position: absolute;
-			}
 		</style>
 	</head>
 	<body>
 		<h1>Projects</h1>
 		<!-- Project 1 -->
-		<div class="project-1">
-			<img id="project-1-preview" src="..\images\ashuramaru-bundle.png">
-			<h1 id="project-1-title">Ashuramaru-Bundle</h1>
-			<p id="project-1-description">Ashuramaru Bundle is a skin suite designed to connect every supported skin with the custome panel made by Kurou to have as much customization possible withing this system...</p>
+		<div class="project">
+			<img id="project-preview" src="..\images\ashuramaru-bundle.png">
+			<h1 id="project-title">Ashuramaru-Bundle</h1>
+			<p id="project-description">Ashuramaru Bundle is a skin suite designed to connect every supported skin with the custome panel made by Kurou to have as much customization possible withing this system...</p>
 			<a href="projects\ashuramaru-bundle.html">
-				<div class="project-1-area"></div>
+				<div class="project-area"></div>
 			</a>
 		</div>
 		<!-- Project 2 -->
@@ -228,21 +127,30 @@
 			</a>
 		</div>
 		<!-- Project 3 -->
-		<div class="project-3">
-			<img id="project-3-preview" src="..\images\terminal.png">
-			<h1 id="project-3-title">Windows Activation Script</h1>
-			<p id="project-3-description">This script lets you activate your windows using kms system (forced activation via microsoft servers). All windows types supported.</p>
+		<div class="project-2">
+			<img id="project-2-preview" src="..\images\terminal.png">
+			<h1 id="project-2-title">Windows Activation Script</h1>
+			<p id="project-2-description">This script lets you activate your windows using kms system (forced activation via microsoft servers). All windows types supported.</p>
 			<a href="projects\windows-activation.html">
-				<div class="project-3-area"></div>
+				<div class="project-2-area"></div>
 			</a>
 		</div>
 		<!-- Project 4 -->
-		<div class="project-4">
-			<img id="project-4-preview" src="..\images\terminal.png">
-			<h1 id="project-4-title">Automatic Shutdown Script</h1>
-			<p id="project-4-description">This script lets you turn off your pc at given time or cancel this operation. Its simple script for simple use.</p>
+		<div class="project-2">
+			<img id="project-2-preview" src="..\images\terminal.png">
+			<h1 id="project-2-title">Automatic Shutdown Script</h1>
+			<p id="project-2-description">This script lets you turn off your pc at given time or cancel this operation. Its simple script for simple use.</p>
 			<a href="projects\automatic-shutdown.html">
-				<div class="project-4-area"></div>
+				<div class="project-2-area"></div>
+			</a>
+		</div>
+		<!-- Project 4 -->
+		<div class="project-2">
+			<img id="project-2-preview" src="..\images\osu-icon.png">
+			<h1 id="project-2-title">Ashuramaru Osu Skin</h1>
+			<p id="project-2-description">Skin for Osu created from 2 different skins which name i doesnt remember...</p>
+			<a href="projects\ashuramaru-osu-skin.html">
+				<div class="project-2-area"></div>
 			</a>
 		</div>
 	</body>
