--- a/website/include/projects/ashuramaru-bundle.html
+++ b/website/include/projects/ashuramaru-bundle.html
@@ -1,33 +1,10 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+
 <html>
 	<head>
-		<script>
-			document.addEventListener('contextmenu', event => event.preventDefault());
-		</script>
-		<script>
-			document.onkeydown = function (e) {
- 
-        			// disable F12 key
-        			if(e.keyCode == 123) {
-            				return false;
-        			}
- 
-        			// disable I key
-        			if(e.ctrlKey && e.shiftKey && e.keyCode == 73){
-           				return false;
-        			}
- 
-        			// disable J key
-        			if(e.ctrlKey && e.shiftKey && e.keyCode == 74) {
-         		   		return false;
-        			}
- 
-        			// disable U key
-        			if(e.ctrlKey && e.keyCode == 85) {
-           				 return false;
-        			}
-    			}
-		</script>
+		<!-- JavaScript -->
+		<script type="text/javascript" src="..\..\javascript\context-menu.js"></script>
+		<script type="text/javascript" src="..\..\javascript\keyboard-keys.js"></script>
 		<style>
 			body {
 				overflow-y: scroll;
@@ -38,6 +15,7 @@
 				-moz-user-select: none;
 				-ms-user-select: none;
 				user-select: none;
+				width: 96.8%;
 			}
 			#title {
 				color: red;
