--- a/css/blog.css
+++ b/css/blog.css
@@ -8,10 +8,10 @@ section::after {
 /* Background */
 section article {
 	margin: auto;
-	border: 1px solid #ffffff;
 	width: 60%;
-	height: 400px;
+	height: 450px;
 	margin-top: 50px;
+	border: 1px solid #6a6a6a;
 	border-radius: 10px;
 	transition: all .2s ease-in-out;
 }
@@ -19,7 +19,16 @@ section article {
 /* Hover */
 section article:hover {
 	transform: scale(1.1);
+	border: 1px solid #ffffff;
 	cursor: pointer;
+}
+
+section article:hover h3 {
+	color: #ffffff;
+}
+
+section article:hover #img {
+	background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.20), rgba(0, 0, 0, 1)), url('../img/blog/post_1/banner.png');
 }
 
 /* Link color */
@@ -30,28 +39,21 @@ section a {
 /* Title */
 section article h3 {
 	position: relative;
-	z-index: 100;
 	bottom: 65px;
 	left: 10px;
 	font-size: 40px;
 	font-family: 'Mukta', sans-serif;
+	color: #6a6a6a;
+	transition: all .2s ease-in-out;
 }
 
 /* Banner */
-section article img {
+section article #img {
 	width: 100%;
-	height: 90%;
-	position: static;
-	border-top-left-radius: 10px;
-	border-top-right-radius: 10px;
-}
-
-/* Description */
-section article p {
-	position: relative;
-	font-size: 20px;
-	font-family: 'Nunito', sans-serif;
-	left: 10px;
-	bottom: 60px;
-	text-align: justify;
+	height: 100%;
+	border-radius: 10px;
+	background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.90)), url('../img/blog/post_1/banner.png');
+	background-repeat: no-repeat;
+	background-size: cover;
+	transition: all .2s ease-in-out;
 }
