--- a/css/main.css
+++ b/css/main.css
@@ -29,6 +29,12 @@ body::after {
 	height: 50px;
 }
 
+/* Selection color */
+::selection {
+	color: #000000;
+	background: #ffffff;
+}
+
 /* Footer */
 
 footer {
